feat: implemeted some order charts
