# src/main/duerre-manager/src/plugins/http/openapi.json
@@ -414,6 +414,37 @@
         }
       }
     },
+    "/api/v1/metric-controller/orders" : {
+      "get" : {
+        "tags" : [ "Metric Resource" ],
+        "operationId" : "getOrders",
+        "responses" : {
+          "200" : {
+            "description" : "Return orders distribution",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/OrderAggregationResult"
+                  }
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Unable to compute orders distribution",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorWrapper"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/metric-controller/ram" : {
       "get" : {
         "tags" : [ "Metric Resource" ],
@@ -431,6 +462,37 @@
           },
           "500" : {
             "description" : "Unable to compute RAM usage",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorWrapper"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/metric-controller/top-orders" : {
+      "get" : {
+        "tags" : [ "Metric Resource" ],
+        "operationId" : "getTopOrders",
+        "responses" : {
+          "200" : {
+            "description" : "Return the top n orders",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/OrderAggregationResult"
+                  }
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Unable to compute the top n orders",
             "content" : {
               "application/json" : {
                 "schema" : {
@@ -1202,6 +1264,18 @@
           },
           "orderId" : {
             "type" : "string"
+          }
+        }
+      },
+      "OrderAggregationResult" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "string"
+          },
+          "count" : {
+            "format" : "int32",
+            "type" : "integer"
           }
         }
       },
