# src/main/java/com/github/matteo099/resources/MetricResource.java
@@ -8,8 +8,10 @@ import org.eclipse.microprofile.openapi.annotations.responses.APIResponses;
 import org.jboss.logging.Logger;
 
 import com.github.matteo099.model.Metric;
+import com.github.matteo099.model.projections.OrderAggregationResult;
 import com.github.matteo099.model.wrappers.ErrorWrapper;
 import com.github.matteo099.services.MetricService;
+import com.github.matteo099.services.OrderService;
 
 import jakarta.inject.Inject;
 import jakarta.ws.rs.GET;
@@ -26,6 +28,9 @@ public class MetricResource {
 
     @Inject
     MetricService metricService;
+
+    @Inject
+    OrderService orderService;
 
     @GET
     @Produces(MediaType.APPLICATION_JSON)
@@ -84,4 +89,42 @@ public class MetricResource {
         }
     }
 
+    @GET
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("/orders")
+    @APIResponses({
+            @APIResponse(responseCode = "200", description = "Return orders distribution", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(type = SchemaType.ARRAY, implementation = OrderAggregationResult.class))),
+            @APIResponse(responseCode = "500", description = "Unable to compute orders distribution", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = ErrorWrapper.class)))
+    })
+    public Response getOrders() {
+        try {
+            logger.info("Computing order distribution");
+            return Response.ok()
+                    .entity(orderService.getDistribution())
+                    .build();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Response.serverError().entity(ErrorWrapper.of(e)).build();
+        }
+    }
+
+    @GET
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("/top-orders")
+    @APIResponses({
+            @APIResponse(responseCode = "200", description = "Return the top n orders", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(type = SchemaType.ARRAY, implementation = OrderAggregationResult.class))),
+            @APIResponse(responseCode = "500", description = "Unable to compute the top n orders", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = ErrorWrapper.class)))
+    })
+    public Response getTopOrders() {
+        try {
+            int n = 10;
+            logger.infof("Computing the top %d orders", n);
+            return Response.ok()
+                    .entity(orderService.getTop(n, null, null))
+                    .build();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Response.serverError().entity(ErrorWrapper.of(e)).build();
+        }
+    }
 }
